# TierListMaker

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  package.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  InstallRules.cmake  ProjectOptions.cmake  Version.cmake
docs/: architecture.md  build.md  privacy.md  project-format.md  release.md  shortcuts.md  theme-system.md  third-party-notices.md  user-guide.md
packaging/: README.md
packaging/linux/: README.md
packaging/macos/: README.md
packaging/windows/: README.md  update.nsi
resources/: resources.qrc
resources/macos/: app-icon.icns
resources/themes/: dark.json  light.json
resources/translations/: TierListMaker_en.ts  TierListMaker_zh_CN.ts
resources/windows/: TierListMaker.rc.in
src/app/: Application.cpp  Application.h  main.cpp
src/assets/: AssetManager.cpp  AssetManager.h  CoverImageCache.cpp  CoverImageCache.h  ImageLoader.cpp  ImageLoader.h  ThumbnailCache.cpp  ThumbnailCache.h
src/export/: ExportOptions.cpp  ExportOptions.h  TierListExporter.cpp  TierListExporter.h
src/i18n/: LanguageManager.cpp  LanguageManager.h
src/logging/: Logger.cpp  Logger.h  UiPerformanceMonitor.cpp  UiPerformanceMonitor.h
src/navigation/: SidebarDelegate.cpp  SidebarDelegate.h  SidebarModel.cpp  SidebarModel.h  SidebarView.cpp  SidebarView.h
src/pages/: EditPage.cpp  EditPage.h  PreferencesPage.cpp  PreferencesPage.h  ProjectLocationDialog.cpp  ProjectLocationDialog.h  ProjectsPage.cpp  ProjectsPage.h
src/persistence/: AtomicFileWriter.cpp  AtomicFileWriter.h  ProjectRepository.cpp  ProjectRepository.h  ProjectSerializer.cpp  ProjectSerializer.h  RecentProjectsStore.cpp  RecentProjectsStore.h  Result.h
src/platform/: Platform.cpp  Platform.h  PlatformMac.mm
src/preview/: PreviewOverlay.cpp  PreviewOverlay.h
src/settings/: AppSettings.cpp  AppSettings.h  SettingsKeys.cpp  SettingsKeys.h
src/theme/: Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h  ThemeTokens.h
src/tier/: CropEditorWidget.cpp  CropEditorWidget.h  ImageEditDialog.cpp  ImageEditDialog.h  ImageGalleryPopover.cpp  ImageGalleryPopover.h  ImagePoolWidget.cpp  ImagePoolWidget.h  TierBoardWidget.cpp  TierBoardWidget.h  TierDragController.cpp  TierDragController.h  TierImage.cpp  TierImage.h  TierListDelegate.cpp  TierListDelegate.h  TierListLayout.cpp  TierListLayout.h  TierListModel.cpp  TierListModel.h  TierListView.cpp  TierListView.h  TierProject.cpp  TierProject.h  TierRow.cpp  TierRow.h  TierRowEditDialog.cpp  TierRowEditDialog.h
src/update/: AppUpdater.cpp  AppUpdater.h  UpdateButton.cpp  UpdateButton.h
src/widgets/: DestructiveActionDialog.cpp  DestructiveActionDialog.h  EmptyStateWidget.cpp  EmptyStateWidget.h  FlowLayout.cpp  FlowLayout.h  RoundedButton.cpp  RoundedButton.h  SearchField.cpp  SearchField.h  SectionHeader.cpp  SectionHeader.h
src/window/: AppDialog.cpp  AppDialog.h  AppMessageDialog.cpp  AppMessageDialog.h  AppTitleBar.cpp  AppTitleBar.h  MainWindow.cpp  MainWindow.h  RootWidget.cpp  RootWidget.h  SidebarToggleButton.cpp  SidebarToggleButton.h
tests/integration/: CMakeLists.txt  tst_ImageImport.cpp  tst_ProjectSaveAsFlow.cpp  tst_ProjectSaveOpen.cpp
tests/unit/: CMakeLists.txt  tst_AppUpdater.cpp  tst_AssetManager.cpp  tst_PreviewOverlay.cpp  tst_ProjectSerializer.cpp  tst_RecentProjectsStore.cpp  tst_Resources.cpp  tst_ThemeManager.cpp  tst_ThumbnailCache.cpp  tst_TierListLayout.cpp  tst_WindowLifecycle.cpp  tst_WindowResizePolicy.cpp
